deploy/k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    environment: production
    argocd.argoproj.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
